para suscripciones vía pushbullet.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Blog de J.D. Zárate
 markdown: redcarpet
 pygments: true
-description: J.D. escribe sobre tecnología y cualquier otra ocurrencia
+description: J.D. escribe sobre tecnología y cualquier otra ocurrencia.
 url: http://www.jdzarate.com
