Changes in CSS an format of website.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Blog de J.D. Zárate
 markdown: redcarpet
 pygments: true
-description: J.D. escribe sobre tecnología y cualquier otra ocurrencia.
-url: http://www.jdzarate.com
+description: J.D. escribe sobre sus conflictos con la tecnología.
+url: http://www.jdzarate.com/
