update de url en config

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ name: Blog de J.D. Zárate
 markdown: redcarpet
 pygments: true
 description: J.D. escribe sobre sus conflictos con la tecnología.
-url: http://www.jdzarate.com/
+url: http://www.jdzarate.com
