--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Blog de J.D. Zárate
-markdown: redcarpet
+markdown: kramdown
 pygments: true
 description: J.D. escribe sobre sus conflictos con la tecnología.
 url: http://www.jdzarate.com
